syntax = "proto3";

package hatokuse;

option java_package = "com.hatokuse.proto";
option java_multiple_files = true;
option java_outer_classname = "HaToKuSeProto";

// Mesaj replikasyonu için kullanılan servis
service MemberService {
    // Liderden üyeye mesaj replikasyonu
    rpc ReplicateMessage(ReplicateRequest) returns (ReplicateResponse);
    
    // Liderden üyeye mesaj sorgulama
    rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);
    
    // Üyenin mesaj sayısını sorgulama
    rpc GetMessageCount(MessageCountRequest) returns (MessageCountResponse);
    
    // Üyenin durumunu kontrol etme (health check)
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Lider servisi - üyeler tarafından kullanılır
service LeaderService {
    // Üye kayıt işlemi
    rpc RegisterMember(RegisterRequest) returns (RegisterResponse);
    
    // Üye deregistration
    rpc UnregisterMember(UnregisterRequest) returns (UnregisterResponse);
    
    // Heartbeat - üyenin hayatta olduğunu bildirmesi
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

// ============== Mesaj Replikasyonu ==============

message ReplicateRequest {
    string message_id = 1;
    string message_content = 2;
}

message ReplicateResponse {
    bool success = 1;
    string error_message = 2;
}

// ============== Mesaj Sorgulama ==============

message GetMessageRequest {
    string message_id = 1;
}

message GetMessageResponse {
    bool found = 1;
    string message_content = 2;
    string error_message = 3;
}

// ============== Mesaj Sayısı ==============

message MessageCountRequest {
    // Boş olabilir
}

message MessageCountResponse {
    int32 count = 1;
}

// ============== Health Check ==============

message HealthCheckRequest {
    // Boş olabilir
}

message HealthCheckResponse {
    bool healthy = 1;
    int32 message_count = 2;
}

// ============== Üye Kayıt ==============

message RegisterRequest {
    string member_id = 1;
    string host = 2;
    int32 port = 3;
}

message RegisterResponse {
    bool success = 1;
    string error_message = 2;
}

// ============== Üye Çıkış ==============

message UnregisterRequest {
    string member_id = 1;
}

message UnregisterResponse {
    bool success = 1;
}

// ============== Heartbeat ==============

message HeartbeatRequest {
    string member_id = 1;
    int32 message_count = 2;
}

message HeartbeatResponse {
    bool acknowledged = 1;
}
